--- a/c-jquery/exercices/6-ajax/jquery_ajax_ex_1_php/index.html
+++ b/c-jquery/exercices/6-ajax/jquery_ajax_ex_1_php/index.html
@@ -49,6 +49,7 @@
 
 	// chargement de données html
 	$("#container").load("load.html");
+	// possibilité de faire $('#result').load('ajax/test.html #container');
 
 	</script>
 
