--- a/d-jquerymobile/7-api/navigate.html
+++ b/d-jquerymobile/7-api/navigate.html
@@ -1,32 +1,32 @@
 <!doctype html>
 <html>
 <head>
-  <title>jQuery Mobile: Remote autocomplete</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-  <script>
+	<title>jQuery Mobile: Remote autocomplete</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+	<script>
 // Bind to the navigate event
 $( window ).on( "navigate", function( event, data ){
-  console.log( data.state );
+	console.log( data );
 });
 
 // Trigger a navigate event by pushing state
-window.history.pushState( { foo: "bar" }, "Title", "http://example.com/#foo" );
+//window.history.pushState( { foo: "bar" }, "Title", "http://example.com/#foo" );
 
 // From the `navigate` binding on the window, console output:
 // => {}
 
 // Trigger a navigate event by pushing state
-window.history.pushState( {}, "Title", "http://example.com/#bar" );
+//window.history.pushState( {}, "Title", "http://example.com/#bar" );
 
 // From the `navigate` binding on the window, console output:
 // => {}
 
 // Trigger a navigate event by moving backward through history
-window.history.back();
+//window.history.back();
 
 // From the `navigate` binding on the window, console output:
 // => { foo: "bar" }
@@ -35,7 +35,7 @@ window.history.back();
 <body>
 
 
- <!-- TODO EXO : Faire une page avec boutons pour simuler la navigation -->
+	<!-- TODO EXO : Faire une page avec boutons pour simuler la navigation -->
 
 
 
