--- a/c-jquery/solutions/5-animation/jquery_anim_ex_4_animating.html
+++ b/c-jquery/solutions/5-animation/jquery_anim_ex_4_animating.html
@@ -52,7 +52,7 @@
         $("#monDiv").animate({ fontSize: "24pt" }, 1000);
       });
       $("#toggle").click(function() {
-        $("#monDiv").animate({ left: "500" }, 1000, "linear");
+        $("#monDiv").animate({ left: "+500" }, 1000, "linear");
       });
 
     })
