--- a/c-jquery/solutions/1-selecteurs_filtres/jquery_self_ex_1_sel_base.html
+++ b/c-jquery/solutions/1-selecteurs_filtres/jquery_self_ex_1_sel_base.html
@@ -29,13 +29,13 @@
 
   $(document).ready(function(){
     /* selectionner tous les p */
-    $("p").addClass('c');
+    //$("p").addClass('c');
     /* selectionner tous les éléments qui ont la classe a */
-    $(".a").addClass('c');
+    //$(".a").addClass('c');
     /* selectionner l'élément ayant pour id list1 */
     $("#list1").addClass('c');
     /* selectionner tous les p de classe b */
-    $("p.b").addClass('c');
+    //$("p.b").addClass('c');
   })
 
   </script>
