--- a/c-jquery/solutions/jquery_ex_3_chargement_dom.html
+++ b/c-jquery/solutions/jquery_ex_3_chargement_dom.html
@@ -21,9 +21,9 @@
   <script src="../../a-common/js/jquery-1.9.1.min.js"></script>
   <script>
   /* Retirer le ready et déplacer ce code en haut pour constater le non chargement du DOM */
-  //$(document).ready(function(){
+  $(document).ready(function(){
     $('ul li').addClass('colored');
-  //});
+  });
   </script>
 </body>
 </html>
