--- a/d-jquerymobile/8-ajax/ajax-autocomplete.html
+++ b/d-jquerymobile/8-ajax/ajax-autocomplete.html
@@ -18,7 +18,7 @@
 
       /* URL Geobytes : http://www.geobytes.com/ */
       if ( value && value.length > 2 ) {
-        $ul.html( "<li><div class='ui-loader'><span class='ui-icon ui-icon-loading'></span></div></li>" );
+        /*$ul.html( "<li><div class='ui-loader'><span class='ui-icon ui-icon-loading'></span></div></li>" );*/
         // jSonP via la méthode ajax
         $.ajax({
           url: "http://gd.geobytes.com/AutoCompleteCity",
