--- a/d-jquerymobile/3-rwd/table/toggle.html
+++ b/d-jquerymobile/3-rwd/table/toggle.html
@@ -4,166 +4,115 @@
   <title>jQuery Mobile: Layout Grids</title> 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+
   <style>
-  .th-groups th {
-    background-color: rgba(0,0,0,0.07);
-    border-right: 1px solid #fff;
-    text-align: center;
-  }
-  @media screen and (max-width: 72em) {
-    /* Style the first cell in a row in a dark bar */
-    .financial-table-reflow th: first-child {
-      color: #fff;
-      background-color: #555;
-      font-size: 1.2em;
-      padding: .3em .6em .3em .6em;
-      -webkit-text-shadow: none;
-      -moz-text-shadow: none;
-      text-shadow: none;
-    }
-    /* Hide the label in the first cell */
-    .financial-table-reflow th: first-child .ui-table-cell-label {
-      display: none;
-    }
-    /* Make the grouped header labels green */
-    .ui-table-reflow th .ui-table-cell-label-top,
-    .ui-table-reflow td .ui-table-cell-label-top {
-      font-weight: bold;
-      color: #319B47;
-      font-size: 1.1em;
-    }
-  }
-  /* Media query to show as a standard table at wider widths, must be very wide for this table */
-  @media screen and (min-width: 72em) {
-    /* Show the table header rows */
-    .financial-table-reflow td,
-    .financial-table-reflow th,
-    .financial-table-reflow tbody th,
-    .financial-table-reflow tbody td,
-    .financial-table-reflow thead td,
-    .financial-table-reflow thead th {
-      display: table-cell;
-      margin: 0;
-    }
-    /* Hide the labels in each cell */
-    .financial-table-reflow td .ui-table-cell-label,
-    .financial-table-reflow th .ui-table-cell-label {
-      display: none;
-    }
-  }
-  /* Hack to make IE9 and WP7.5 treat cells like block level elements */
-  /* Applied in a max-width media query up to the table layout breakpoint so we don't need to negate this*/
-  @media (max-width: 72em) {
-    .financial-table-reflow td,
-    .financial-table-reflow th {
-      width: 100%;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
-      float: left;
-      clear: left;
-    }
-  }
-  </style>
+  /*
+  http://view.jquerymobile.com/1.3.2/dist/demos/widgets/table-column-toggle/ 
+
+  The six preset breakpoint classes included in the column toggle stylesheet use regular increments of 10em (160 pixels). Here is a summary of the breakpoints assigned to each priority in the preset styles:
+
+  data-priority="1"
+  Displays the column at 320px (20em)
+  data-priority="2"
+  Displays the column at 480px (30em)
+  data-priority="3"
+  Displays the column at 640px (40em)
+  data-priority="4"
+  Displays the column at 800px (50em)
+  data-priority="5"
+  Displays the column at 960px (60em)
+  data-priority="6"
+  Displays the column at 1,120px (70em)
+*/
+</style>
+
 </head> 
 <body>  
-  <div data-role="page">
-
-    <div data-role="header">
-      <h1>Table</h1>
-    </div>
-    <div data-role="content"> 
-      <table data-role="table" id="financial-table-reflow" data-mode="reflow" class="financial-table-reflow table-stroke">
-        <thead>
-          <tr class="th-groups">
-            <th></th>
-            <th colspan="3">Q1 2012</th>
-            <th colspan="3">Q2 2012</th>
-            <th colspan="3">Q3 2012</th>
-            <th colspan="3">Q4 2012</th>
-            <th colspan="3" class="totals">YTD Totals</th>
-          </tr>
-          <tr>
-            <th>Store</th>
-            <th>Income</th>
-            <th>Profit</th>
-            <th>Change</th>
-            <th>Income</th>
-            <th>Profit</th>
-            <th>Change</th>
-            <th>Income</th>
-            <th>Profit</th>
-            <th>Change</th>
-            <th>Income</th>
-            <th>Profit</th>
-            <th>Change</th>
-            <th>Income</th>
-            <th>Profit</th>
-            <th>Change</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th>Boston</th>
-            <td>2,898</td>
-            <td>739</td>
-            <td>-5.8%</td>
-            <td>3,647</td>
-            <td>1,354</td>
-            <td>+5.8%</td>
-            <td>4,981</td>
-            <td>2,246</td>
-            <td>+13.4%</td>
-            <td>3,457</td>
-            <td>1,259</td>
-            <td>-3.9%</td>
-            <td>12,463</td>
-            <td>6,234</td>
-            <td>+5.9%</td>
-          </tr>
-          <tr>
-            <th>Chicago</th>
-            <td>2,898</td>
-            <td>739</td>
-            <td>-5.8%</td>
-            <td>3,647</td>
-            <td>1,354</td>
-            <td>+5.8%</td>
-            <td>4,981</td>
-            <td>2,246</td>
-            <td>+13.4%</td>
-            <td>3,457</td>
-            <td>1,259</td>
-            <td>-3.9%</td>
-            <td>12,463</td>
-            <td>6,234</td>
-            <td>+5.9%</td>
-          </tr>
-          <tr>
-            <th>NYC</th>
-            <td>2,898</td>
-            <td>739</td>
-            <td>-5.8%</td>
-            <td>3,647</td>
-            <td>1,354</td>
-            <td>+5.8%</td>
-            <td>4,981</td>
-            <td>2,246</td>
-            <td>+13.4%</td>
-            <td>3,457</td>
-            <td>1,259</td>
-            <td>-3.9%</td>
-            <td>12,463</td>
-            <td>6,234</td>
-            <td>+5.9%</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-  </div>
+  <table data-role="table" class="ui-responsive" id="table-custom-2" data-mode="columntoggle" class="ui-body-d ui-shadow table-stripe ui-responsive" data-column-btn-theme="b" data-column-btn-text="Columns to display..." data-column-popup-theme="a">
+   <thead>
+     <tr class="ui-bar-d">
+       <th data-priority="2">Rank</th>
+       <th>Movie Title</th>
+       <th data-priority="3">Year</th>
+       <th data-priority="1"><abbr title="Rotten Tomato Rating">Rating</abbr></th>
+       <th data-priority="5">Reviews</th>
+     </tr>
+   </thead>
+   <tbody>
+     <tr>
+       <th>1</th>
+       <td><a href="http://en.wikipedia.org/wiki/Citizen_Kane" data-rel="external">Citizen Kane</a></td>
+       <td>1941</td>
+       <td>100%</td>
+       <td>74</td>
+     </tr>
+     <tr>
+       <th>2</th>
+       <td><a href="http://en.wikipedia.org/wiki/Casablanca_(film)" data-rel="external">Casablanca</a></td>
+       <td>1942</td>
+       <td>97%</td>
+       <td>64</td>
+     </tr>
+     <tr>
+       <th>3</th>
+       <td><a href="http://en.wikipedia.org/wiki/The_Godfather" data-rel="external">The Godfather</a></td>
+       <td>1972</td>
+       <td>97%</td>
+       <td>87</td>
+     </tr>
+     <tr>
+       <th>4</th>
+       <td><a href="http://en.wikipedia.org/wiki/Gone_with_the_Wind_(film)" data-rel="external">Gone with the Wind</a></td>
+       <td>1939</td>
+       <td>96%</td>
+       <td>87</td>
+     </tr>
+     <tr>
+       <th>5</th>
+       <td><a href="http://en.wikipedia.org/wiki/Lawrence_of_Arabia_(film)" data-rel="external">Lawrence of Arabia</a></td>
+       <td>1962</td>
+       <td>94%</td>
+       <td>87</td>
+     </tr>
+     <tr>
+       <th>6</th>
+       <td><a href="http://en.wikipedia.org/wiki/Dr._Strangelove" data-rel="external">Dr. Strangelove Or How I Learned to Stop Worrying and Love the Bomb</a></td>
+       <td>1964</td>
+       <td>92%</td>
+       <td>74</td>
+     </tr>
+     <tr>
+       <th>7</th>
+       <td><a href="http://en.wikipedia.org/wiki/The_Graduate" data-rel="external">The Graduate</a></td>
+       <td>1967</td>
+       <td>91%</td>
+       <td>122</td>
+     </tr>
+     <tr>
+       <th>8</th>
+       <td><a href="http://en.wikipedia.org/wiki/The_Wizard_of_Oz_(1939_film)" data-rel="external">The Wizard of Oz</a></td>
+       <td>1939</td>
+       <td>90%</td>
+       <td>72</td>
+     </tr>
+     <tr>
+       <th>9</th>
+       <td><a href="http://en.wikipedia.org/wiki/Singin%27_in_the_Rain" data-rel="external">Singin' in the Rain</a></td>
+       <td>1952</td>
+       <td>89%</td>
+       <td>85</td>
+     </tr>
+     <tr>
+       <th>10</th>
+       <td class="title"><a href="http://en.wikipedia.org/wiki/Inception" data-rel="external">Inception</a></td>
+       <td>2010</td>
+       <td>84%</td>
+       <td>78</td>
+     </tr>
+   </tbody>
+ </table>
 </body>
 </html>
