Maj enonces + exercices Ajax

--- a/c-jquery/exercices/1-selecteurs_filtres/jquery_self_ex_1_sel_base.html
+++ b/c-jquery/exercices/1-selecteurs_filtres/jquery_self_ex_1_sel_base.html
@@ -28,6 +28,7 @@
   <script>
 
   $(document).ready(function(){
+    /* REMARQUE : Utiliser .addClass('c') pour tester */
     /* selectionner tous les p */
     /* selectionner tous les a */
     /* selectionner l'élément ayant pour id list1 */
