--- a/c-jquery/exercices/1-selecteurs_filtres/jquery_self_ex_5_filtre_attr.html
+++ b/c-jquery/exercices/1-selecteurs_filtres/jquery_self_ex_5_filtre_attr.html
@@ -31,7 +31,7 @@
     // Les p qui ont un attribut class
     // Les p qui ont un attribut id égal à para2
     // Les p qui ont un attribut id de valeur commençant par para
-    // Les p qui ont un attribut id commençant par para et un attribut lang contenant la chaine en-
+    // Les p qui ont un attribut id commençant par para et également un attribut lang contenant la chaine en-
   })
 
   </script>
