--- a/c-jquery/exercices/3-manipulation/jquery_manip_ex_1_creation.html
+++ b/c-jquery/exercices/3-manipulation/jquery_manip_ex_1_creation.html
@@ -34,7 +34,7 @@
 
       // Créer un nouveau paragraphe
 
-      // Affecter sa valeur à #para2
+      // Affecter sa valeur (son "html") à #para2
 
       // Modifier le contenu text du dernier paragraphe
   })
