--- a/c-jquery/exercices/3-manipulation/jquery_manip_ex_2_insertion.html
+++ b/c-jquery/exercices/3-manipulation/jquery_manip_ex_2_insertion.html
@@ -34,9 +34,9 @@
 
     // Ajouter du contenu au début de tous les paragraphes
 
-    // Déplace le dernier paragraphe à la fin (après) du premier paragraphe
+    // Déplace le dernier paragraphe à la fin (à l'intérieur) du premier paragraphe
 
-    // Déplace le denier paragraphe au début (avant) du premier paragraphe
+    // Déplace le denier paragraphe au début (à l'intérieur) du premier paragraphe
 
   })
 
