--- a/c-jquery/solutions/1-selecteurs_filtres/jquery_self_ex_5_filtre_attr.html
+++ b/c-jquery/solutions/1-selecteurs_filtres/jquery_self_ex_5_filtre_attr.html
@@ -34,7 +34,7 @@
     $("p[id=para2]").addClass('c');
     // Les p qui ont un attribut id de valeur commençant par para
     $("p[id^=para]").addClass('c');
-    // Les p qui ont un attribut id commençant par para et un attribut lang contenant la chaine en-
+    // Les p qui ont un attribut id commençant par para et également un attribut lang contenant la chaine en-
     $("p[id^=para],p[lang*=en-]").addClass('c');
   })
 
