--- a/c-jquery/solutions/3-manipulation/jquery_manip_ex_1_creation.html
+++ b/c-jquery/solutions/3-manipulation/jquery_manip_ex_1_creation.html
@@ -37,7 +37,7 @@
       // Créer un nouveau paragraphe
       var newItem = $("<p>Nouveau paragraphe</p>");
 
-      // Affecter sa valeur à #para2
+      // Affecter sa valeur (son "html") à #para2
       $("#para2").html(newItem.html());
 
       // Modifier le contenu text du dernier paragraphe
