--- a/c-jquery/exercices/6-ajax/jquery_ajax_ex_1_php/index.html
+++ b/c-jquery/exercices/6-ajax/jquery_ajax_ex_1_php/index.html
@@ -5,7 +5,6 @@
 	<title>AJAX: POST</title>
 </head>
 <body>
-
 	<h1>Something to Save</h1>
 	<form action="#">
 		<textarea name="content" id="content" cols="30" rows="10"></textarea>		
@@ -19,55 +18,16 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 <script>
-
 	// 1. poster les données du champ content du formulaire vers le serveur (save.php)
-	// 2. récupérer les données (via post : load.php) et les afficher dans le champ content lors du chargement
-	// 3. récupérer le contenu du fichier load.json
+	// effectuer le post lors de l'évènement 'submit' du formulaire
+
+	// 2. récupérer les données (via post : load.php) et les afficher dans le champ #content lors du chargement
+
+	// 3. récupérer le contenu du fichier load.json dans #content2
+
 	// 4. intégrer le contenu de load.html dans #container
-	// 5. Récupérer des données en XML
 
-	// Ecoute le click (transmission du formulaire) pour poster vers le serveur
-	$('form').on('submit', function(e) {
-		$.post( 'save.php', $(this).serialize(), function(response) {
-			alert( response );
-		});
-		// désactiver l'action par défaut
-		e.preventDefault();
-	});
-
-	// Récupératon des données lors du chargement de la page
-	$.post( 'load.php', function(data) {
-		if ( data ) {
-			$('#content').val( data );
-		}
-	});
-
-	// Chargement de données jSon
-	$.getJSON('load.json', function(data){
-		if(data)
-		{
-			$("#content2").val(data.content);
-		}
-	});
-
-	// chargement de données html
-	$("#container").load("load.html");
-	// possibilité de faire $('#result').load('ajax/test.html #container');
-
-	// Chargement de données en Xml
-	jQuery.ajax({
-		type: "POST",
-		// Service .asmx (ex : http://manga.com/Services/Manga.asmx/GetProducts)
-		url: "data.xml",
-		dataType: "xml",
-		data: "{}",
-		contentType: "application/xml; charset=utf-8",
-		success: function(data) {
-			console.log(data);
-			edata = $(data).find("string").text();
-			alert(edata);
-		}
-	})
+	// 5. Récupérer des données en XML (data.xml) en utilisant .ajax
 
 	</script>
 
