--- a/d-jquerymobile/3-rwd/d-grid/exercices/responsive_grids_preset_bp.html
+++ b/d-jquerymobile/3-rwd/d-grid/exercices/responsive_grids_preset_bp.html
@@ -11,19 +11,11 @@
 
   <style>
 
-  /* To apply a preset breakpoint to stack grids below 35em (560px), add the .ui-responsive class to the grid container. */
-
-  /* stack all grids below 25em (400px) */
-  @media all and (max-width: 25em) {
-    .my-breakpoint .ui-block-a,
-    .my-breakpoint .ui-block-b,
-    .my-breakpoint .ui-block-c,
-    .my-breakpoint .ui-block-d,
-    .my-breakpoint .ui-block-e {
-      width: 100%;
-      float: none;
-    }
-  }
+  /*
+    TODO:
+    Breakpoint pour la grille D à 400px (utiliser max-width)
+    Empiler tous les blocs (utiliser la classe my-breakpoint)
+  */
 
   </style>
 </head> 
