--- a/d-jquerymobile/7-api/c-methods-properties/method-loadPage/home.html
+++ b/d-jquerymobile/7-api/c-methods-properties/method-loadPage/home.html
@@ -14,7 +14,7 @@
     $(document).on( 'click', '#preloadStore', function() {
 
       // Preload the store.html page.
-      $.mobile.loadPage( 'store.html' )
+      $.mobile.loadPage( 'store.html',{prefetch:"true"} )
         .done( function( absUrl, options, page, dupCachedPage ) {
           alert( "Store page loaded. Full URL: " + absUrl );
           storePageLoaded = true;
