--- a/d-jquerymobile/7-api/c-methods-properties/property-initSelector.html
+++ b/d-jquerymobile/7-api/c-methods-properties/property-initSelector.html
@@ -10,8 +10,8 @@
   <script>
 
     $(document).on( 'mobileinit', function() {
-      //input[type='radio']
-      $.mobile.checkboxradio.prototype.options.initSelector = "input[type='checkbox']";
+      //
+      $.mobile.checkboxradio.prototype.options.initSelector = "input[type='checkbox'],input[type='radio']";
     } );
      
   </script>
