--- a/d-jquerymobile/7-api/b-events/B-event-page-init.html
+++ b/d-jquerymobile/7-api/b-events/B-event-page-init.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
   <script>
+  // équivalent à $( document ).ready( handler )
   $( function() {
 
     $('#myPage').on( 'pagebeforecreate', function() {
