Maj exo jQuery rotation d'images

--- a/c-jquery/exercices/5-animation/jquery_anim_ex_5_image_rotation.html
+++ b/c-jquery/exercices/5-animation/jquery_anim_ex_5_image_rotation.html
@@ -51,7 +51,19 @@
     <script>
       // TODO : Implémenter cette fonction
       function rotate() {
+        // 1. On récupère la photo courante
 
+        // 2. On récupère la photo suivante (/!\ si elle existe)
+
+        //3. On passe la photo courante en photo précédente
+        // ie. passage de class current à previous
+        // pour qu'elle soit visible pendant l'animation
+
+        //4. On anime (fade) l'apparition de la nouvelle photo
+        // a. On la rend invisible (opacity:0)
+        // b. On lui ajoute la classe current
+        // c. On anime via fadeTo
+        // d. A la fin de l'animation, on supprime la photo précedente
       }
 
 
